# open-writing-bench

./: .gitignore  README.md  creative_writing_bench.py  open_writing_bench.py  pyproject.toml
alembic/: ensure_db.py  env.py
alembic/versions/: ea1c75efdd57_autogen.py
config/: judge_model_creds.yaml  judge_model_creds.yaml.example  models.yaml
core/: benchmark.py  conversation.py  elo.py  elo_config_cw.py  metrics.py  scoring.py
data/: creative_writing_judging_prompt_v1.txt  creative_writing_judging_prompt_v1_noanalysis.txt  creative_writing_prompts_v3.json  creative_writing_prompts_v3_final_unslopped_discrim.json  creative_writing_prompts_v3_scp_fanfic_genres_discrim.json  new_4_test.json  pairwise_prompt_v1.1.txt  pairwise_prompt_v1.12.txt  pairwise_prompt_v1.12_no_cot.txt  pairwise_prompt_v1.txt
utils/: api.py  config_loader.py  db_connector.py  db_schema.py  logging_setup.py  pretty_print.py
